block/unblock room

--- a/admin/room/index.html
+++ b/admin/room/index.html
@@ -67,12 +67,7 @@
                     >Update Room Booking</a
                   >
                   <a class="btn col-md-12 btn-lg btn-demo" href="blockRoom.html"
-                    >Block Room</a
-                  >
-                  <a
-                    class="btn col-md-12 btn-lg btn-demo"
-                    href="unblockRoom.html"
-                    >Unblock Room</a
+                    >Block/Unblock Room</a
                   >
                   <a class="btn col-md-12 btn-lg btn-demo" href="blockRC.html"
                     >Block RC Booking</a
