--- a/admin/room/blockRoom.html
+++ b/admin/room/blockRoom.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Block Room</title>
+    <title>Block/Unblock Room</title>
 
     <!-- Load jQuery first -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
@@ -37,22 +37,36 @@
           <div class="inner-padding">
             <div class="frm-head">
               <h4>
-                <b><u>Block Room</u></b>
+                <b><u>Block/Unblock Room</u></b>
               </h4>
             </div>
 
             <div class="form">
               <div id="alert" class="alert" role="alert"></div>
-              <form class="row" id="blockRoomForm">
-                <label for="roomNo" class="col-form-label">Room No:</label>
-                <div class="col-sm-7">
-                  <input type="text" class="form-control" id="roomNo" name="roomNo" required />
+
+              <div class="row">
+                <div class="col-md-12">
+                  <div class="table">
+                    <table
+                      id="reportTable"
+                      class="table table-striped table-bordered"
+                    >
+                      <thead>
+                        <tr>
+                          <th>Room No</th>
+                          <th>Room Type</th>
+                          <th>Gender</th>
+                          <th>Status</th>
+                          <th>Action</th>
+                        </tr>
+                      </thead>
+                      <tbody id="reportTableBody">
+                        <!-- Table rows will be dynamically added here -->
+                      </tbody>
+                    </table>
+                  </div>
                 </div>
-  
-                <div class="col-sm-1">
-                  <button type="submit" class="btn btn-small">Block Room</button>
-                </div>
-              </form>
+              </div>
             </div>
           </div>
         </div>
