--- a/admin/index.html
+++ b/admin/index.html
@@ -30,41 +30,51 @@
   </head>
   <body>
     <div class="fullheight">
+      <div class="header"></div>
       <div class="middlecontent">
         <div class="container">
           <div class="whitesec">
             <div class="inner-padding">
               <div class="frm-head">
-                <h1>Welcome To Research Centre</h1>
+                <h3>Welcome To Research Centre</h3>
               </div>
               <!-- Fixed Form Placement -->
-              <form action="#" method="post" onsubmit="login(event)">
-                <div class="form">
+              <div class="form">
+                <form action="#" method="post" onsubmit="login(event)">
                   <div class="row">
-                    <div class="col-md-12">
+                    <div class="col-sm-3">
                       <label for="username">Username:</label>
+                    </div>
+                    <div class="col-sm-5">
                       <input
                         type="text"
                         name="username"
                         id="username"
-                        placeholder=""
-                      />
+                        placeholder=""/>
                     </div>
-                    <div class="col-md-12">
+                  </div>
+                  <div class="row">
+                    <div class="col-sm-3">
                       <label for="password">Password:</label>
+                    </div>
+                    <div class="col-sm-5">
                       <input
                         type="password"
                         id="password"
                         name="password"
-                        placeholder="**********"
-                      />
+                        placeholder="*******"/>
                     </div>
-                    <div class="col-md-12">
+                  </div>
+                  <div class="row">
+                    <div class="col-sm-3">
+                      <label for="submit"></label>
+                    </div>
+                    <div class="col-sm-5">
                       <input type="submit" name="submit" value="Login" />
                     </div>
                   </div>
-                </div>
-              </form>
+                </form>
+              </div>
               <!-- End of Fixed Form -->
             </div>
           </div>
@@ -74,9 +84,9 @@
         <div class="container">
           <p>
             © 2019
-            <a href="#" target="_blank"
-              >Shrimad Rajchandra Aatma Tatva Research Centre</a
-            >
+            <a href="#" target="_blank">
+              Shrimad Rajchandra Aatma Tatva Research Centre
+            </a>
           </p>
         </div>
       </div>
