--- a/admin/room/dailyGuestCountReport.html
+++ b/admin/room/dailyGuestCountReport.html
@@ -34,52 +34,60 @@
     <div class="middlecontent">
       <div class="container-fluid">
         <div class="whitesec">
-          <div class="frm-head">
-            <h1>
-              <b><u>Daily Guest Count Report</u></b>
-            </h1>
-          </div>
-          <div class="form" id="reportForm">
-            <form class="row">
-                <label for="start_date" class="col-form-label">Start Date:</label>
-                <div class="col-sm-3">
-                  <input type="date" class="form-control" id="start_date" name="start_date" required />
-                </div>
+          <div class="inner-padding">
+            <div class="frm-head">
+              <h4>
+                <b><u>Daily Guest Count Report</u></b>
+              </h4>
+            </div>
+            <div class="form" id="reportForm">
+              <div id="alert" class="alert" role="alert"></div>
+              <form>
+                <div class="row">
+                  <label for="start_date" class="col-form-label">Start Date:</label>
+                  <div class="col-sm-3">
+                    <input type="date" class="form-control" id="start_date" name="start_date" required />
+                  </div>
 
-                <label for="end_date" class="col-form-label">End Date:</label>
-                <div class="col-sm-3">
-                  <input type="date" class="form-control" id="end_date" name="end_date" required />
-                </div>
+                  <label for="end_date" class="col-form-label">End Date:</label>
+                  <div class="col-sm-3">
+                    <input type="date" class="form-control" id="end_date" name="end_date" required />
+                  </div>
 
-                <div class="col-sm-1">
-                  <button type="submit" class="btn btn-small">Fetch Report</button>
+                  <div class="col-sm-1">
+                    <button type="submit" class="btn btn-small">Fetch Report</button>
+                  </div>
                 </div>
-            </form>
-
-            <div class="row">
-              <div class="col-md-12">
-                <div class="table">
-                  <table
-                    id="reportTable"
-                    class="table table-striped table-bordered"
-                  >
-                    <thead>
-                      <tr>
-                        <th>Date</th>
-                        <th>NAC Count</th>
-                        <th>AC Count</th>
-                      </tr>
-                    </thead>
-                    <tbody id="reportTableBody">
-                      <!-- Table rows will be dynamically added here -->
-                    </tbody>
-                  </table>
-                </div>
-              </div>
+              </form>
             </div>
 
-            <div class="row" id="emptyReportResult">
-
+            <div>
+              <div class="row">
+                <div class="col-md-12">
+                  <div class="frm-head">
+                    <h4>
+                      <b><u>Report</u></b>
+                    </h4>
+                  </div>
+                  <div class="table">
+                    <table
+                      id="reportTable"
+                      class="table table-striped table-bordered"
+                    >
+                      <thead>
+                        <tr>
+                          <th>Date</th>
+                          <th>NAC Count</th>
+                          <th>AC Count</th>
+                        </tr>
+                      </thead>
+                      <tbody id="reportTableBody">
+                        <!-- Table rows will be dynamically added here -->
+                      </tbody>
+                    </table>
+                  </div>
+                </div>
+              </div>
             </div>
           </div>
         </div>
