--- a/admin/room/fetchRoomBookingsByCard.html
+++ b/admin/room/fetchRoomBookingsByCard.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Room Bookings by Card Number</title>
+    <title>Room Bookings By Card Number</title>
 
     <!-- Load jQuery first -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
@@ -34,43 +34,55 @@
     <div class="middlecontent">
       <div class="container">
         <div class="whitesec">
-          <div class="frm-head">
-            <h1>
-              <b><u>Room Bookings by Card Number</u></b>
-            </h1>
-          </div>
+          <div class="inner-padding">
+            <div class="frm-head">
+              <h4>
+                <b><u>Room Bookings By Card Number</u></b>
+              </h4>
+            </div>
 
-          <div class="form">
-            <div id="alert" class="alert" role="alert"></div>
-            <form id="bookingForm" class="row">
-              <label for="cardno" class="col-form-label">Card No:</label>
-              <div class="col-sm-4">
-                <input type="text" class="form-control" id="cardno" name="cardno" required />
-              </div>
+            <div class="form">
+              <div id="alert" class="alert" role="alert"></div>
+              <form id="bookingForm">
+                <div class="row">
+                  <div class="col-sm-3">
+                    <label for="cardno" class="col-form-label">Card No:</label>
+                  </div>
+                  <div class="col-sm-5">
+                    <input type="text" class="form-control" id="cardno" name="cardno" required />
+                  </div>
+                  <div class="col-sm-1">
+                    <button type="submit" class="btn btn-small">Fetch Bookings</button>
+                  </div>
+                </div>
+              </form>
+            </div>
 
-              <div class="col-sm-1">
-                <button type="submit" class="btn btn-small">Fetch Bookings</button>
-              </div>
-            </form>
-
-            <div class="row">
-              <div class="col-md-12">
-                <div class="table">
-                  <table id="bookingsTable" class="table table-striped table-bordered">
-                  <thead>
-                    <tr>
-                      <th>Booking ID</th>
-                      <th>Room Number</th>
-                      <th>Check-in Date</th>
-                      <th>Check-out Date</th>
-                      <th>Nights</th>
-                      <th>Status</th>
-                    </tr>
-                  </thead>
-                  <tbody>
-                    <!-- Room booking data will be dynamically inserted here -->
-                  </tbody>
-                  </table>
+            <div>
+              <div class="row">
+                <div class="col-md-12">
+                  <div class="frm-head">
+                    <h4>
+                      <b>Bookings</b>
+                    </h4>
+                  </div>
+                  <div class="table">
+                    <table id="bookingsTable" class="table table-striped table-bordered">
+                    <thead>
+                      <tr>
+                        <th>Booking ID</th>
+                        <th>Room Number</th>
+                        <th>Check-in Date</th>
+                        <th>Check-out Date</th>
+                        <th>Nights</th>
+                        <th>Status</th>
+                      </tr>
+                    </thead>
+                    <tbody>
+                      <!-- Room booking data will be dynamically inserted here -->
+                    </tbody>
+                    </table>
+                  </div>
                 </div>
               </div>
             </div>
