--- a/admin/room/flatBooking.html
+++ b/admin/room/flatBooking.html
@@ -22,7 +22,7 @@
 
   <body>
     <div class="header">
-      <div class="container-fluid">
+      <div class="container">
         <div class="logout">
           <a href="javascript:void(0);" onclick="history.back()">Back</a>
           &nbsp; | &nbsp; <a href="/admin/">Home</a> &nbsp; | &nbsp;
