--- a/admin/room/occupancyReport.html
+++ b/admin/room/occupancyReport.html
@@ -32,21 +32,20 @@
     </div>
 
     <div class="middlecontent">
-      <div class="container">
+      <div class="container-fluid">
         <div class="whitesec">
-          <div class="frm-head">
-            <h1>
-              <b><u>Occupancy Report</u></b>
-            </h1>
-          </div>
-          <div class="form">
+          <div class="inner-padding">
             <div class="row">
               <div class="col-md-12">
+                <div class="frm-head">
+                  <h4>
+                    <b><u>Occupancy Report</u></b>
+                  </h4>
+                </div>
                 <div class="table">
                   <table
                     id="occupancyTable"
-                    class="table table-striped table-bordered"
-                  >
+                    class="table table-striped table-bordered">
                     <thead>
                       <tr>
                         <th>Booking ID</th>
