--- a/admin/room/fetchRoomBookingsByCard.html
+++ b/admin/room/fetchRoomBookingsByCard.html
@@ -45,14 +45,14 @@
               <div id="alert" class="alert" role="alert"></div>
               <form id="bookingForm">
                 <div class="row">
-                  <div class="col-sm-3">
+                  <div class="col-sm-2">
                     <label for="cardno" class="col-form-label">Card No:</label>
                   </div>
                   <div class="col-sm-5">
                     <input type="text" class="form-control" id="cardno" name="cardno" required />
                   </div>
-                  <div class="col-sm-1">
-                    <button type="submit" class="btn btn-small">Fetch Bookings</button>
+                  <div class="col-sm-3">
+                    <input type="submit" value="Submit" />
                   </div>
                 </div>
               </form>
