--- a/admin/room/flatBooking.html
+++ b/admin/room/flatBooking.html
@@ -80,7 +80,10 @@
 
                 <div class="row">
                   <div class="col-sm-3">
-                    <button type="submit" class="btn btn-small">Book Flat</button>
+                    <label for="submit" class="col-form-label"></label>
+                  </div>
+                  <div class="col-sm-3">
+                    <input type="submit" value="Submit" />
                   </div>
                 </div>
               </form>
