--- a/admin/room/roomReports.html
+++ b/admin/room/roomReports.html
@@ -76,8 +76,11 @@
                   </div>
 
                   <div class="row">
-                    <div class="col-sm-1">
-                      <button type="submit" class="btn btn-small">Submit</button>
+                    <div class="col-sm-2">
+                      <label for="submit" class="col-form-label"></label>
+                    </div>
+                    <div class="col-sm-2">
+                      <input type="submit" value="Submit" />
                     </div>
                   </div>
               </form>
