allow editing room

--- a/admin/room/index.html
+++ b/admin/room/index.html
@@ -61,8 +61,8 @@
                     href="fetchFlatBookingsByCard.html"
                     >Fetch Flat Bookings By Card</a
                   >
-                  <a class="btn col-md-12 btn-lg btn-demo" href="blockRoom.html"
-                    >Block / Unblock Room</a
+                  <a class="btn col-md-12 btn-lg btn-demo" href="manageRooms.html"
+                    >Manage Rooms</a
                   >
                   <a class="btn col-md-12 btn-lg btn-demo" href="blockRC.html"
                     >Block / Unblock RC</a
