--- a/admin/room/roomBooking.html
+++ b/admin/room/roomBooking.html
@@ -83,8 +83,8 @@
                   </div>
                   <div class="col-sm-3">
                     <select id="room_type" name="room_type" required>
-                      <option selected="selected" value="nac">NAC</option>
-                      <option value="ac">AC</option>
+                      <option selected="selected" value="nac">Non A.C.</option>
+                      <option value="ac">A.C.</option>
                     </select>
                   </div>
 
