--- a/admin/room/manageRooms.html
+++ b/admin/room/manageRooms.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Block / Unblock Room</title>
+    <title>Manage Rooms</title>
 
     <!-- Load jQuery first -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
@@ -17,7 +17,7 @@
     <script src="../../style/js/clockpicker.js"></script>
     <script src="../../style/js/custom.js"></script>
     <script src="/sessionstorage.js"></script>
-    <script src="blockRoom.js"></script>
+    <script src="manageRooms.js"></script>
   </head>
 
   <body>
@@ -37,7 +37,7 @@
           <div class="inner-padding">
             <div class="frm-head">
               <h4>
-                <b><u>Block / Unblock Room</u></b>
+                <b><u>Manage Rooms</u></b>
               </h4>
             </div>
 
@@ -53,6 +53,7 @@
                     >
                       <thead>
                         <tr>
+                          <th>&nbsp;</th>
                           <th>Room No</th>
                           <th>Room Type</th>
                           <th>Gender</th>
