--- a/admin/food/index.html
+++ b/admin/food/index.html
@@ -50,14 +50,8 @@
                   ><br />
                   <a
                     class="btn col-md-12 btn-lg btn-demo"
-                    href="fetchPhysicalPlateIssued.html"
-                  >
-                    Physical Plate Issued</a
-                  ><br />
-                  <a
-                    class="btn col-md-12 btn-lg btn-demo"
-                    href="bookFoodForMumukshu.html"
-                    >Book Food For Mumukshu</a
+                    href="manageFood.html"
+                    >Manage Food Bookings</a
                   ><br />
                   <a
                     class="btn col-md-12 btn-lg btn-demo"
@@ -78,6 +72,12 @@
                     class="btn col-md-12 btn-lg btn-demo"
                     href="cancelFoodForGuest.html"
                     >Cancel Food For Guest</a
+                  ><br />
+                    <a
+                    class="btn col-md-12 btn-lg btn-demo"
+                    href="fetchPhysicalPlateIssued.html"
+                  >
+                    Physical Plate Issued</a
                   ><br />
                   <a
                     class="btn col-md-12 btn-lg btn-demo"
