Fix Rajprawas Report

--- a/admin/travel/updateBookingStatus.html
+++ b/admin/travel/updateBookingStatus.html
@@ -57,7 +57,15 @@
                       <option value="admin cancelled">Admin Cancelled</option>
                       <option value="cancelled">Cancelled</option>
                       <option value="waiting">Waiting</option>
+                      <option value="pending">Payment Pending</option>
                     </select>
+                    <label for="AdminComments">Admin Comments:</label>
+                    <input
+                    type="text"
+                    id="adminComments"
+                    name="adminComments"
+                    
+                    /> 
                     <button type="submit">Update Status</button>
                   </form>
                   <p id="statusMessage"></p>
