Fix formatting issue

--- a/admin/travel/fetchUpcomingBookings.html
+++ b/admin/travel/fetchUpcomingBookings.html
@@ -46,7 +46,7 @@
     <div class="header">
       <div class="container">
         <div class="logout">
-          <a href="javascript:void(0);" onclick="history.back()">Back why i am not seen</a>
+          <a href="javascript:void(0);" onclick="history.back()">Back</a>
           &nbsp; | &nbsp; <a href="/admin/">Home</a> &nbsp; | &nbsp;
           <a id="homelink" href="/admin/">Logout</a>
         </div>
@@ -62,7 +62,7 @@
           <div class="row">
             <div class="col-md-12">
 
-              Load Summary Table here 
+              <h3><br />Summary for <span id="currentDate"></span></p> </h3>
 
               <div class="table" ">
                 <table
