--- a/admin/food/index.html
+++ b/admin/food/index.html
@@ -65,9 +65,9 @@
                   ><br />
                     <a
                     class="btn col-md-12 btn-lg btn-demo"
-                    href="fetchPhysicalPlateIssued.html"
+                    href="plateCount.html"
                   >
-                    Physical Plate Issued</a
+                    Plate Issued</a
                   ><br />
                   <a
                     class="btn col-md-12 btn-lg btn-demo"
