--- a/admin/food/index.html
+++ b/admin/food/index.html
@@ -37,7 +37,7 @@
           <div class="inner-padding">
             <div class="frm-head">
               <h4>
-                <b><u>Food Management </u></b>
+                <b><u>Food Management</u></b>
               </h4>
             </div>
             <div class="form">
@@ -71,13 +71,8 @@
                   ><br />
                   <a
                     class="btn col-md-12 btn-lg btn-demo"
-                    href="foodReport.html"
-                    >Food Report</a
-                  ><br />
-                  <a
-                    class="btn col-md-12 btn-lg btn-demo"
-                    href="foodReportDetails.html"
-                    >Food Report Details</a
+                    href="foodReports.html"
+                    >Food Reports</a
                   ><br />
                   <a
                     class="btn col-md-12 btn-lg btn-demo"
