--- a/admin/food/issuedPlateReport.html
+++ b/admin/food/issuedPlateReport.html
@@ -18,6 +18,7 @@
     <script src="../../style/js/custom.js"></script>
     <script src="/sessionstorage.js"></script>
     <script src="issuedPlateReport.js"></script>
+    <script src="issuePlate.js"></script>
   </head>
 
   <body>
