bulk guest booking

--- a/admin/food/index.html
+++ b/admin/food/index.html
@@ -55,7 +55,7 @@
                   ><br />
                   <a
                     class="btn col-md-12 btn-lg btn-demo"
-                    href="bookFoodForGuest.html"
+                    href="manageBulkFood.html"
                     >Book Food For Guest</a
                   ><br />
                   <a
