delete bulk food booking

--- a/admin/food/manageBulkFood.html
+++ b/admin/food/manageBulkFood.html
@@ -132,7 +132,7 @@
               <div class="col-md-12">
                 <div class="frm-head">
                   <h4>
-                    <b><u>Manage Existing Guest Bookings</u></b>
+                    <b><u>Manage Guest Food Bookings</u></b>
                   </h4>
                 </div>
                 <div class="table">
@@ -142,10 +142,10 @@
                         <th>&nbsp;</th>
                         <th>Date</th>
                         <th>Booked By</th>
+                        <th>Mobile No.</th>
                         <th>Department</th>
                         <th>Guest Count</th>
                         <th>Meals</th>
-                        <th></th>
                       </tr>
                     </thead>
                     <tbody id="bookingsTableBody">
