show non-spicy food count in food report

--- a/admin/food/index.html
+++ b/admin/food/index.html
@@ -56,18 +56,13 @@
                   <a
                     class="btn col-md-12 btn-lg btn-demo"
                     href="manageBulkFood.html"
-                    >Book Food For Guest</a
+                    >Manage Guest Food Bookings</a
                   ><br />
                   <a
                     class="btn col-md-12 btn-lg btn-demo"
-                    href="cancelFoodForGuest.html"
-                    >Cancel Food For Guest</a
-                  ><br />
-                    <a
-                    class="btn col-md-12 btn-lg btn-demo"
                     href="plateCount.html"
                   >
-                    Plate Issued</a
+                    Plates Issued</a
                   ><br />
                   <a
                     class="btn col-md-12 btn-lg btn-demo"
