Added Edit Actions for adhyan Waitlist report

--- a/admin/adhyayan/adhyayanStatusUpdate.html
+++ b/admin/adhyayan/adhyayanStatusUpdate.html
@@ -104,6 +104,7 @@
                       Update Status
                     </button>
                   </form>
+                  <p id="statusMessage"></p>
                 </div>
               </div>
             </div>
