--- a/admin/adhyayan/adhyayanWaitlist.html
+++ b/admin/adhyayan/adhyayanWaitlist.html
@@ -45,15 +45,17 @@
                   <thead>
                     <tr>
                       <th>Booking ID</th>
-                      <th><center>Shibir Name</center></th>
-                      <th><center>Speaker</center></th>
-                      <th><center>Start Date</center></th>
-                      <th><center>End Date</center></th>
-                      <th>Booked By</th>
-                      <th>Issued To</th>
+                      <th>Guest Name</th>
                       <th>Mobile Number</th>
                       <th>Center</th>
                       <th>Mumkshu Status</th>
+                      <th>Shibir Name</th>
+                      <th>Speaker</th>
+                      <th>Start Date</th>
+                      <th>End Date</th>
+                      <th>Status</th>
+                      <th>Booked By</th>
+                      <th>Action</th>
                     </tr>
                   </thead>
                   <tbody>
